docs: revamp `how-to-logging-in-rust.md`
Signed-off-by: Adam Mozes <adam.mozes@rdx.works>